# repo-pilot

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  USAGE.md  confidence-model.md  determinism-boundary.md  eval-harness.md  github_auto_runtime_testing_plan.md  glossary.md  prd-v1-verified-runbook-spine.md  repair-loop.md
eval/: manifest.50.json  manifest.example.json
repo_pilot/: __init__.py  artifacts.py  candidate_planning.py  cli.py  cloner.py  component_oracles.py  compose.py  compose_import.py  confidence.py  config.py  discovery.py  eval.py  evidence.py  executor.py  explore_tools.py  extractors.py  graph.py  healthcheck.py  llm_planner.py  llm_profiler.py  model_client.py  nl_extract.py  oracles.py  outcome.py  plan_agent.py  planner.py  profiler.py  repair.py  report.py  run_shape.py  run_verifier.py  runbook_projection.py  schemas.py  security.py  shape_detection.py  smoke.py
schemas/: evidence.schema.json  profile.schema.json  run-plan.schema.json  runbook.schema.json
tests/: conftest.py  test_artifacts.py  test_candidate_planning.py  test_cli.py  test_cloner.py  test_component_executor.py  test_component_integration.py  test_component_oracles.py  test_compose.py  test_compose_cmd.py  test_compose_import.py  test_confidence.py  test_config.py  test_discovery.py  test_docker_executor.py  test_docker_orchestration.py  test_eval.py  test_executor.py  test_explore_tools.py  test_extractors.py  test_fixtures.py  test_graph.py  test_graph_components.py  test_http_probe.py  test_llm_planner.py  test_llm_profiler.py  test_model_client.py  test_oracles.py  test_outcome.py  test_plan_agent.py  test_planner.py  test_profiler.py  test_provisioning_integration.py  test_repair.py  test_repo_mount.py  test_report.py  test_run_plan_schema.py  (+9 more)
(+47 files in other folders)
