[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-pilot"
version = "0.1.0"
description = "Turn a GitHub repo into a Verified Runbook plus a smoke-test report."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jsonschema>=4.20",
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8"]
# extra model providers (default anthropic ships in core); install as needed and
# select via REPO_PILOT_MODEL_PROVIDER
openai = ["langchain-openai>=0.2"]
google = ["langchain-google-genai>=2.0"]

[project.scripts]
repo-pilot = "repo_pilot.cli:main"

[tool.setuptools.packages.find]
include = ["repo_pilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require Docker (slow); excluded from the default run",
]
addopts = "-m 'not integration'"
